scss/partials/_editor.scss
#icontent {
  z-index: 0;
  .bg-img-wrap {
    &:before {
      content:"Content Area";
      height: auto;
      width: auto;
      font-size: 1.5em;
      padding: 0.5em;
    }
  }
  li {
    padding-left: 0;
  }
  #post-footer .wsite-text {
      display: block;
  }
  &.home-page {
    // .wsite-element-section-highlight {
    //   z-index: 3 !important;
    // }
  }
  #expanded-info__map {
    & > div,
    & > div > div,
    & > div > div > div {
      height: inherit;
    }
  }
}

